index.html update

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 
     <h1>Odin Recipes</h1>
 
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href="recipes/onions.html">Baked Onions</a></li>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/ribs.html">Oven-Baked Ribs</a></li>
+    </ul>
+
+    <p> </p>
+
+    <p><a href="https://www.allrecipes.com/">All Recipes</a></p>
+
+    <p><a href="https://www.theodinproject.com/">The Odin Project</a></p>
 </body>
 </html>
