--- a/recipes/onions.html
+++ b/recipes/onions.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Baked Onion</h1>
 
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets-ucg.meredithcorp.io%2F0beaa584f9edbb0a403778f8d51d76dd%2F5374432.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Oven-baked Ribs" width="200px">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets-ucg.meredithcorp.io%2F0beaa584f9edbb0a403778f8d51d76dd%2F5374432.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Baked Onion" width="200px">
 
     <h2>Description</h2>
 
